[package]
name = "diamond"
version = "0.1.0"
authors = ["Javier Maldonado <3goliad@gmail.com>", "Zak Ziebell"]

[dependencies]
log = "*"               
env_logger = "*"         
glutin = "*"             
gfx = "*"                
gfx_device_gl = "*"      
gfx_window_glutin = "*" 
nalgebra = "*"
ncollide = "*"
rand = "*"
genmesh = "*"        
noise = "*"             
